Update Capacity Modelling ver 2.ipynb

--- a/Capacity Modelling ver 2.ipynb
+++ b/Capacity Modelling ver 2.ipynb
@@ -971,6 +971,16 @@
    "source": [
     "print('Hello Marcus')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69fcb6d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('This is Mike')"
+   ]
   }
  ],
  "metadata": {
