--- a/Capacity Modelling ver 2.ipynb
+++ b/Capacity Modelling ver 2.ipynb
@@ -991,6 +991,16 @@
    "source": [
     "print('Hello')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d600ee2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Hello people')"
+   ]
   }
  ],
  "metadata": {
