Update Capacity Modelling ver 2.ipynb

--- a/Capacity Modelling ver 2.ipynb
+++ b/Capacity Modelling ver 2.ipynb
@@ -969,7 +969,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Hello Marcus')"
+    "print('Hello Marcus')\n",
+    "print('this is the end')"
    ]
   }
  ],
