--- a/Randomone.ipynb
+++ b/Randomone.ipynb
@@ -18,7 +18,8 @@
     "x=1\n",
     "y=2\n",
     "z=x+y\n",
-    "print(z)"
+    "print(z)\n",
+    "print('but does z really equal x + y?')"
    ]
   },
   {
